--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [info]
-pic = '../assets/img/20231203--maharajatoad.jpeg'
-name = 'RITZFY'
-sec = 'On Computer Science, Math etc'
-desc = 'I’m Ritav, currently pursuing my undergraduate studies. My academic curiosity is piqued by the intricate theories of Computer Science, the transformative potential of Machine Learning, and the critical importance of Security in today’s digital age. I want to build systems which will support AI.'
+pic = ../assets/img/20231203--maharajatoad.jpeg
+name = RITZFY
+sec = On Computer Science, Math etc
+desc = I’m Ritav, currently pursuing my undergraduate studies. My academic curiosity is piqued by the intricate theories of Computer Science, the transformative potential of Machine Learning, and the critical importance of Security in today’s digital age. I want to build systems which will support AI.
 
 [links]
-resume = '/'
-email = 'hello.w28cw@slmail.me'
-linkedin = 'https://www.linkedin.com/in/ritav-j-029a9b246'
-github = 'https://github.com/ritzfy'
+resume = /
+email = hello.w28cw@slmail.me
+linkedin = https://www.linkedin.com/in/ritav-j-029a9b246
+github = https://github.com/ritzfy
