--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [info]
-pic = ../assets/img/20231203--maharajatoad.jpeg
+pic = https://i.ibb.co/gPc0DTs/20231203-maharajatoad.jpg
 name = ritzfy
 sec = On Computer Science, AI, Math etc
 desc = I’m Ritav, currently pursuing my undergraduate studies. My academic curiosity is piqued by the intricate theories of Computer Science, the transformative potential of Machine Learning, and the critical importance of Security in today’s digital age. I want to build systems which will support AI.
