modified:   config.ini

--- a/config.ini
+++ b/config.ini
@@ -7,5 +7,5 @@ desc = I’m Ritav, currently pursuing my undergraduate studies. My academic cur
 [links]
 resume = /
 email = hello.w28cw@slmail.me
-linkedin = https://www.linkedin.com/in/ritav-j-029a9b246
+linkedin = https://www.linkedin.com/in/ritav-j
 github = https://github.com/ritzfy
